[gd_scene load_steps=23 format=3 uid="uid://biiypi4omlo1t"]

[ext_resource type="PackedScene" path="res://scenes/game_ui/BonusGameUI.tscn" id="1"]
[ext_resource type="PackedScene" path="res://scenes/game_ui/GameOver.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/game_ui/LevelComplete.tscn" id="3"]
[ext_resource type="PackedScene" path="res://scenes/player/PlayerBody.tscn" id="4"]
[ext_resource type="Script" path="res://scenes/stages/itemSpawn.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://cbt8sabb6tj8t" path="res://scenes/menu/MenuManager.tscn" id="6"]
[ext_resource type="PackedScene" path="res://scenes/game_ui/LevelBonusComplete.tscn" id="7"]
[ext_resource type="PackedScene" path="res://scenes/player/Gatorobo/Gatorobo.tscn" id="8"]
[ext_resource type="Script" path="res://scenes/stages/TutorialBonusStageWindow.gd" id="9"]
[ext_resource type="StyleBox" path="res://scenes/menu/painel_style_blue.tres" id="10"]
[ext_resource type="Texture2D" uid="uid://bky6e7letaw5y" path="res://assets/Images/Lixeira/lixeira_amarela.png" id="11"]
[ext_resource type="Texture2D" uid="uid://cwywft7a1qmja" path="res://assets/Images/Scenery/fundo2.2.png" id="12"]
[ext_resource type="Texture2D" uid="uid://g4m7xflkwamx" path="res://assets/Images/Scenery/fundo1.png" id="13"]
[ext_resource type="TileSet" path="res://scenes/tilesets/TileCity.tres" id="14"]
[ext_resource type="TileSet" path="res://scenes/tilesets/TileRoad.tres" id="15"]
[ext_resource type="Texture2D" uid="uid://novtl17cewlc" path="res://assets/Images/Scenery/ceu1.png" id="16"]
[ext_resource type="FontFile" path="res://assets/Font/text_ui.tres" id="17"]
[ext_resource type="Texture2D" uid="uid://btgq3bieuv6p2" path="res://assets/Images/Lixeira/lixeira_vermelha.png" id="18"]
[ext_resource type="Texture2D" uid="uid://pmxxgn8b05wc" path="res://assets/Images/Lixeira/lixeira_verde.png" id="19"]
[ext_resource type="Texture2D" uid="uid://cac4xeo13ogxc" path="res://assets/Images/Lixeira/lixeira_marrom.png" id="20"]
[ext_resource type="Texture2D" uid="uid://cuupuavajnrol" path="res://assets/Images/Lixeira/lixeira_azul.png" id="21"]
[ext_resource type="FontFile" path="res://assets/Font/text_ui_small.tres" id="22"]

[node name="Stage" type="Node2D"]

[node name="Ch√£o" type="TileMap" parent="."]
tile_set = ExtResource("15")
format = 2

[node name="Predios" type="TileMap" parent="."]
z_index = -3
tile_set = ExtResource("14")
format = 2

[node name="Player" parent="." instance=ExtResource("8")]
position = Vector2(187.836, 398.154)

[node name="Background" type="Node2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="Background"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/ParallaxBackground"]

[node name="lixo" type="Sprite2D" parent="Background/ParallaxBackground/ParallaxLayer"]
z_index = -9
position = Vector2(0.904, 100)
texture = ExtResource("12")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 800, 400)

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Background/ParallaxBackground"]

[node name="ceu" type="Sprite2D" parent="Background/ParallaxBackground/ParallaxLayer2"]
z_index = -20
position = Vector2(-2.20026, -1.54373)
texture = ExtResource("16")
centered = false
offset = Vector2(0, 100)
region_enabled = true
region_rect = Rect2(1024, 0, 800, 320)

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Background/ParallaxBackground"]

[node name="predios" type="Sprite2D" parent="Background/ParallaxBackground/ParallaxLayer3"]
z_index = -10
position = Vector2(0.903748, 132.937)
texture = ExtResource("13")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 800, 300)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LevelComplete2" parent="CanvasLayer" instance=ExtResource("7")]
layout_mode = 3
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="GameOver" parent="CanvasLayer" instance=ExtResource("2")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.43195
offset_top = 0.29592
offset_right = 0.431946
offset_bottom = 0.295929
grow_horizontal = 2
grow_vertical = 2

[node name="LevelComplete" parent="CanvasLayer" instance=ExtResource("3")]
layout_mode = 3
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2
type = 1

[node name="GameUI" parent="CanvasLayer" instance=ExtResource("1")]
layout_mode = 3
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TutorialWindow" type="Panel" parent="CanvasLayer"]
custom_minimum_size = Vector2(500, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
mouse_filter = 2
theme_override_styles/panel = ExtResource("10")
script = ExtResource("9")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/TutorialWindow"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = -10.0
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/TutorialWindow/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("17")
text = "BONUS_LEVEL_TITLE"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Label2" type="Label" parent="CanvasLayer/TutorialWindow/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.945098, 1, 0.0392157, 1)
theme_override_fonts/font = ExtResource("17")
text = "DOG_INSTRUCTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="CanvasLayer/TutorialWindow/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("17")
text = "DOG_CONTROL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/TutorialWindow/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/TutorialWindow/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/TutorialWindow/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("11")
stretch_mode = 1

[node name="Label" type="Label" parent="CanvasLayer/TutorialWindow/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("22")
text = "DOG_METAL"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/TutorialWindow/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/TutorialWindow/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("18")

[node name="Label" type="Label" parent="CanvasLayer/TutorialWindow/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("22")
text = "DOG_PLASTIC"
horizontal_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="CanvasLayer/TutorialWindow/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/TutorialWindow/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("19")

[node name="Label" type="Label" parent="CanvasLayer/TutorialWindow/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("22")
text = "DOG_GLASS"
horizontal_alignment = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="CanvasLayer/TutorialWindow/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/TutorialWindow/VBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("20")

[node name="Label" type="Label" parent="CanvasLayer/TutorialWindow/VBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("22")
text = "DOG_ORGANIC"
horizontal_alignment = 1

[node name="VBoxContainer5" type="VBoxContainer" parent="CanvasLayer/TutorialWindow/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/TutorialWindow/VBoxContainer/HBoxContainer/VBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("21")

[node name="Label" type="Label" parent="CanvasLayer/TutorialWindow/VBoxContainer/HBoxContainer/VBoxContainer5"]
layout_mode = 2
theme_override_fonts/font = ExtResource("22")
text = "DOG_PAPER"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="CanvasLayer/TutorialWindow/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("17")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="CanvasLayer/TutorialWindow"]
wait_time = 4.0
autostart = true

[node name="MenuManager" parent="CanvasLayer" instance=ExtResource("6")]
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Gariani" type="Node2D" parent="."]
position = Vector2(18, 8)

[node name="PlayerBody" parent="Gariani" instance=ExtResource("4")]
position = Vector2(41.8439, 390.781)

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, 75)
anchor_mode = 0

[node name="itemSpawn" type="Node2D" parent="."]
script = ExtResource("5")

[node name="Timer" type="Timer" parent="itemSpawn"]
wait_time = 6.0

[node name="EndGame" type="Timer" parent="itemSpawn"]
wait_time = 6.0

[connection signal="timeout" from="CanvasLayer/TutorialWindow/Timer" to="CanvasLayer/TutorialWindow" method="_on_Timer_timeout"]
[connection signal="timeout" from="itemSpawn/Timer" to="itemSpawn" method="_on_Timer_timeout"]
[connection signal="timeout" from="itemSpawn/EndGame" to="itemSpawn" method="_on_EndGame_timeout"]
